Novos testes incluidos na classe Produto Mais caro test